--- a/index.html
+++ b/index.html
@@ -11,27 +11,47 @@
       --accent:#79a6a3; --accent-2:#e2d6cc; --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
       --maxw:1080px; --s3:1rem; --s4:1.5rem; --s6:3rem; --anchor-offset: 90px;
     }
-    body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text);
-      background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);line-height:1.6}
+    *,*::before,*::after{box-sizing:border-box}
+    body{
+      margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text);
+      background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);line-height:1.6
+    }
+    h1,h2,h3{line-height:1.2;margin:0 0 .75rem}
+    a{color:var(--accent);text-decoration:none}
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
-    header{position:sticky;top:0;z-index:20;background:rgba(246,239,233,.9);backdrop-filter:saturate(160%) blur(8px);
-      border-bottom:1px solid #eadfd6}
+
+    /* Cabeçalho */
+    header{position:sticky;top:0;z-index:20;background:rgba(246,239,233,.9);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid #eadfd6}
     .nav{display:flex;align-items:center;justify-content:space-between;gap:.75rem;padding:.6rem 0;flex-wrap:wrap}
     .brand{display:flex;align-items:center;gap:.6rem}
     .brand-logo{height:64px;width:auto}
     nav ul{display:flex;gap:.75rem;list-style:none;margin:0;padding:0}
     nav a{padding:.35rem .55rem;border-radius:10px;font-weight:600}
     nav a:hover{background:var(--accent-2)}
+
+    /* Seções gerais */
     section{padding:var(--s6) 0;scroll-margin-top:var(--anchor-offset)}
     .card{background:var(--card);border:1px solid #eee4da;border-radius:var(--radius);box-shadow:var(--shadow);padding:var(--s4)}
     .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center}
     .portrait-circle{width:300px;height:300px;border-radius:50%;object-fit:cover;box-shadow:var(--shadow);display:block;margin:auto}
+
+    /* Ícones de contato */
+    .social{display:flex;justify-content:center;gap:1rem;margin-top:1rem}
+    .social a{
+      display:inline-flex;align-items:center;justify-content:center;
+      width:48px;height:48px;border-radius:14px;background:var(--card);
+      border:1px solid #eee4da;box-shadow:var(--shadow);transition:transform .15s ease, filter .15s ease;
+    }
+    .social a:hover{transform:translateY(-1px);filter:brightness(0.98)}
+    .social a svg{width:26px;height:26px;fill:var(--accent)}
+
     footer{padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center}
-    /* ícones sociais */
-    .social{margin-top:1rem;display:flex;justify-content:center;gap:1.5rem}
-    .social a svg{width:30px;height:30px;fill:var(--accent);transition:.2s}
-    .social a:hover svg{fill:#2b2b2b}
-    @media(max-width:900px){.grid-2{grid-template-columns:1fr}.portrait-circle{width:240px;height:240px}}
+
+    /* Mobile */
+    @media(max-width:900px){
+      .grid-2{grid-template-columns:1fr}
+      .portrait-circle{width:240px;height:240px}
+    }
   </style>
 </head>
 <body>
@@ -39,14 +59,13 @@
   <header>
     <div class="container nav">
       <div class="brand" aria-label="Identidade do site">
-        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo"
-             onerror="this.style.display='none'">
+        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
         <div class="brand-text">
           <b>Laura Sathler</b>
           <small>Psicóloga · CRP 04/30866</small>
         </div>
       </div>
-      <nav>
+      <nav aria-label="principal">
         <ul>
           <li><a href="#psicoterapia">O que é Psicoterapia</a></li>
           <li><a href="#sobre">Sobre mim</a></li>
@@ -58,37 +77,74 @@
   </header>
 
   <main>
-    <!-- (outras seções iguais ao seu código atual: psicoterapia, sobre mim, quando procurar) -->
+    <!-- O que é Psicoterapia? -->
+    <section id="psicoterapia">
+      <div class="container grid-2">
+        <div class="card text">
+          <h2>O que é Psicoterapia?</h2>
+          <p>A psicoterapia é um espaço seguro de escuta e acolhimento, onde você pode falar livremente sobre o que sente e pensa, sem julgamentos ou expectativas impostas. É um processo que convida ao autoconhecimento, ajudando a reconhecer sua história, compreender as próprias dores, cuidar de si e fortalecer o que traz sentido e vitalidade à vida.</p>
+          <p>Esse caminho nem sempre é simples; ele exige presença, entrega e, por vezes, coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
+          <p>Cada conversa é uma oportunidade para se escutar, se compreender e se posicionar no mundo, no seu tempo e do seu jeito.</p>
+        </div>
+        <div class="media">
+          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async" style="width:100%;border-radius:18px;box-shadow:var(--shadow)">
+        </div>
+      </div>
+    </section>
+
+    <!-- Sobre mim -->
+    <section id="sobre">
+      <div class="container grid-2">
+        <div class="media" style="text-align:center">
+          <img class="portrait-circle" src="Laura.jpeg" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
+        </div>
+        <div class="card text">
+          <h2>Sobre mim</h2>
+          <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
+          <p>Atendo exclusivamente online pessoas com foco em casos de ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões relacionadas a relacionamentos. Meu objetivo é oferecer um cuidado que respeite o seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Quando procurar -->
+    <section id="quando">
+      <div class="container card">
+        <h2>Quando buscar terapia?</h2>
+        <p>Pode ser o momento de iniciar um processo terapêutico quando você:</p>
+        <ul>
+          <li>Sente ansiedade, tristeza ou cansaço emocional frequentes.</li>
+          <li>Percebe dificuldade para lidar com mudanças, perdas ou transições de vida.</li>
+          <li>Vive um sentimento de vazio ou falta de sentido.</li>
+          <li>Enfrenta conflitos nos relacionamentos ou no trabalho.</li>
+          <li>Quer se conhecer melhor e encontrar novas formas de viver com mais equilíbrio e autenticidade.</li>
+        </ul>
+        <p class="muted">A terapia é para qualquer pessoa que deseje cuidar da saúde emocional e desenvolver recursos para lidar com os desafios da vida.</p>
+      </div>
+    </section>
 
     <!-- Contato -->
     <section id="contato">
       <div class="container card" style="text-align:center">
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
-        
-        <!-- Ícones sociais (WhatsApp, E-mail, Instagram) -->
-        <div class="social">
-          <!-- WhatsApp -->
-          <a href="https://wa.me/5531991593800" target="_blank" aria-label="WhatsApp">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path d="M380.9 97.1C339-7.9 209.2-33 121.3 26.3c-65.7 45.5-94 124.4-68.4 199.8L16.5 464l241.6-36.1c76.7 27.7 162.1-.2 207.6-65.9 59.3-87.9 34.2-217.7-83.1-264.9zM232 396.1c-30.2 0-59.6-8.1-85.4-23.4l-6.1-3.6-90.2 13.5 13.6-88.6-3.9-6.4c-42.9-70.8-22.2-163.5 48.6-206.4 70.8-42.9 163.5-22.2 206.4 48.6s22.2 163.5-48.6 206.4c-23.3 14.1-50 21.9-77 21.9zm101.7-138.5c-5.6-2.8-33.1-16.4-38.2-18.2-5.1-1.9-8.8-2.8-12.5 2.8s-14.4 18.2-17.7 21.9c-3.3 3.7-6.5 4.2-12.1 1.4-5.6-2.8-23.5-8.7-44.7-27.6-16.5-14.7-27.6-32.9-30.9-38.5s-.3-8.4 2.5-11.2c2.6-2.8 5.6-7.3 8.4-10.9 2.8-3.7 4.6-6.1 7-10.1s1.9-7.5-.1-10.3c-1.9-2.8-12.5-30.1-17.2-41.3-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2s-9.7 1.4-14.8 7c-5.1 5.6-19.5 19.1-19.5 46.5s20 53.7 22.8 57.5c2.8 3.7 39.4 60.1 95.1 84.3 35.3 15.3 49.1 16.6 66.8 14.4 17.7-1.9 33.1-13.5 37.8-26.5 4.7-13 4.7-24.1 3.3-26.5-1.3-2.6-5.1-4.2-10.7-7z"/>
-            </svg>
-          </a>
 
+        <!-- ÍCONES (somente ícones, sem texto) -->
+        <div class="social" aria-label="Canais de contato">
+          <!-- WhatsApp -->
+          <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M380.9 97.1C339-7.9 209.2-33 121.3 26.3c-65.7 45.5-94 124.4-68.4 199.8L16.5 464l241.6-36.1c76.7 27.7 162.1-.2 207.6-65.9 59.3-87.9 34.2-217.7-83.1-264.9zM232 396.1c-30.2 0-59.6-8.1-85.4-23.4l-6.1-3.6-90.2 13.5 13.6-88.6-3.9-6.4c-42.9-70.8-22.2-163.5 48.6-206.4 70.8-42.9 163.5-22.2 206.4 48.6s22.2 163.5-48.6 206.4c-23.3 14.1-50 21.9-77 21.9z"/></svg>
+          </a>
           <!-- E-mail -->
           <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <path d="M502.3 190.8l-192-160C298.3 25.1 280.1 16 261.3 16H48C21.5 16 0 37.5 0 64v384c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V220.6c0-18.8-9.1-37-23.7-48.6zM464 432H48V80h213.3l192 160V432z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8l-192-160C298.3 25.1 280.1 16 261.3 16H48C21.5 16 0 37.5 0 64v384c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V220.6c0-18.8-9.1-37-23.7-48.6zM464 432H48V80h213.3l192 160V432z"/></svg>
           </a>
-
           <!-- Instagram -->
-          <a href="https://instagram.com/laurasathler" target="_blank" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32Zm-48,128a24,24,0,1,1-24-24A24,24,0,0,1,352,160ZM224,338a82,82,0,1,1,82-82A81.91,81.91,0,0,1,224,338Z"/>
-            </svg>
+          <a href="https://instagram.com/laurasathler" target="_blank" rel="noopener" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32Zm-48,128a24,24,0,1,1-24-24A24,24,0,0,1,352,160ZM224,338a82,82,0,1,1,82-82A81.91,81.91,0,0,1,224,338Z"/></svg>
           </a>
         </div>
+
+        <p style="margin-top:12px"><strong>Telefone:</strong> +55 31 99159-3800</p>
       </div>
     </section>
   </main>
@@ -99,9 +155,6 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('nav a').forEach(a=>{
-      a.addEventListener('click',()=>{ const cb=document.getElementById('menu'); if(cb) cb.checked=false; });
-    });
   </script>
 </body>
 </html>
