--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root{
       --bg:#f6efe9; --bg2:#fbf8f5; --card:#ffffff; --text:#2b2b2b; --muted:#6b6b6b;
       --accent:#79a6a3; --accent-2:#e2d6cc; --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
-      --maxw:1080px; --s3:1rem; --s4:1.5rem; --s6:3rem; --anchor-offset: 90px;
+      --maxw:1080px; --s4:1.5rem; --s6:3rem; --anchor-offset: 90px;
     }
     *,*::before,*::after{box-sizing:border-box}
     body{
@@ -35,19 +35,18 @@
     .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center}
     .portrait-circle{width:300px;height:300px;border-radius:50%;object-fit:cover;box-shadow:var(--shadow);display:block;margin:auto}
 
-    /* Ícones de contato */
+    /* Ícones de contato – tamanho, foco e animação */
     .social{display:flex;justify-content:center;gap:1rem;margin-top:1rem}
     .social a{
       display:inline-flex;align-items:center;justify-content:center;
-      width:48px;height:48px;border-radius:14px;background:var(--card);
-      border:1px solid #eee4da;box-shadow:var(--shadow);transition:transform .15s ease, filter .15s ease;
+      width:52px;height:52px;border-radius:16px;background:transparent;
+      transition:transform .15s ease, filter .15s ease;
     }
     .social a:hover{transform:translateY(-1px);filter:brightness(0.98)}
-    .social a svg{width:26px;height:26px;fill:var(--accent)}
+    .social svg{width:52px;height:52px;display:block}
 
     footer{padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center}
 
-    /* Mobile */
     @media(max-width:900px){
       .grid-2{grid-template-columns:1fr}
       .portrait-circle{width:240px;height:240px}
@@ -128,19 +127,40 @@
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
-        <!-- ÍCONES (somente ícones, sem texto) -->
+        <!-- ÍCONES com visual oficial -->
         <div class="social" aria-label="Canais de contato">
-          <!-- WhatsApp -->
+          <!-- WhatsApp (verde oficial) -->
           <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M380.9 97.1C339-7.9 209.2-33 121.3 26.3c-65.7 45.5-94 124.4-68.4 199.8L16.5 464l241.6-36.1c76.7 27.7 162.1-.2 207.6-65.9 59.3-87.9 34.2-217.7-83.1-264.9zM232 396.1c-30.2 0-59.6-8.1-85.4-23.4l-6.1-3.6-90.2 13.5 13.6-88.6-3.9-6.4c-42.9-70.8-22.2-163.5 48.6-206.4 70.8-42.9 163.5-22.2 206.4 48.6s22.2 163.5-48.6 206.4c-23.3 14.1-50 21.9-77 21.9z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img">
+              <circle cx="32" cy="32" r="32" fill="#25D366"/>
+              <path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Zm-1.6-6.3c-.3-.2-1.7-.9-2-1s-.5-.2-.7.2-.8 1-1 1.2-.4.2-.7.1a10.6 10.6 0 0 1-3.2-2 12 12 0 0 1-2.2-2.7c-.2-.4 0-.6.1-.8l.5-.6c.2-.2.3-.5.4-.7s0-.5 0-.7c0-.2-.7-1.7-1-2.3s-.5-.5-.7-.5h-.6a1.1 1.1 0 0 0-.8.4 3.4 3.4 0 0 0-1 2.5 5.9 5.9 0 0 0 1.2 3.1 13.5 13.5 0 0 0 5.2 5 12 12 0 0 0 2.8 1 .1.1 0 0 0 .2 0h.9c.3 0 .6-.2.8-.5s1-1.2 1.1-1.6.1-.7 0-.8-.2-.2-.5-.4Z"/>
+            </svg>
           </a>
-          <!-- E-mail -->
+
+          <!-- E-mail (neutro) -->
           <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8l-192-160C298.3 25.1 280.1 16 261.3 16H48C21.5 16 0 37.5 0 64v384c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V220.6c0-18.8-9.1-37-23.7-48.6zM464 432H48V80h213.3l192 160V432z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img">
+              <rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/>
+              <path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/>
+            </svg>
           </a>
-          <!-- Instagram -->
-          <a href="https://instagram.com/laurasathler" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32Zm-48,128a24,24,0,1,1-24-24A24,24,0,0,1,352,160ZM224,338a82,82,0,1,1,82-82A81.91,81.91,0,0,1,224,338Z"/></svg>
+
+          <!-- Instagram (gradiente oficial) -->
+          <a href="https://www.instagram.com/laurasathler_psi?igsh=cDh1cDU4MDdqaHJw&utm_source=qr" target="_blank" rel="noopener" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img">
+              <defs>
+                <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0" gradientUnits="userSpaceOnUse">
+                  <stop offset="0" stop-color="#feda75"/>
+                  <stop offset=".3" stop-color="#fa7e1e"/>
+                  <stop offset=".6" stop-color="#d62976"/>
+                  <stop offset=".85" stop-color="#962fbf"/>
+                  <stop offset="1" stop-color="#4f5bd5"/>
+                </linearGradient>
+              </defs>
+              <rect x="6" y="6" width="52" height="52" rx="14" fill="url(#ig)"/>
+              <circle cx="32" cy="32" r="11" fill="none" stroke="#fff" stroke-width="4"/>
+              <circle cx="46" cy="18" r="3.5" fill="#fff"/>
+            </svg>
           </a>
         </div>
 
